--- a/index.html
+++ b/index.html
@@ -128,22 +128,22 @@
             </div>
             <div class="mt-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
                 <div class="card text-center">
-                    <div class="text-4xl mb-4">🏢</div>
+                    <div class="text-4xl mb-4"></div>
                     <h3 class="text-xl font-bold text-blue-800">Companies (Issuers)</h3>
                     <p class="text-gray-600 mt-2">These are the businesses that sell ("issue") their stocks to the public to raise money.</p>
                 </div>
                 <div class="card text-center">
-                    <div class="text-4xl mb-4">🧑‍💻</div>
+                    <div class="text-4xl mb-4"></div>
                     <h3 class="text-xl font-bold text-green-800">Investors</h3>
                     <p class="text-gray-600 mt-2">This is anyone who buys and sells stocks—from individuals with a small account to large institutions managing billions.</p>
                 </div>
                 <div class="card text-center">
-                    <div class="text-4xl mb-4"> посредник </div>
+                    <div class="text-4xl mb-4"></div>
                     <h3 class="text-xl font-bold text-yellow-800">Brokers</h3>
                     <p class="text-gray-600 mt-2">The middlemen. You can't just walk onto an exchange. You need a licensed broker to execute your trades for you.</p>
                 </div>
                 <div class="card text-center">
-                    <div class="text-4xl mb-4">🏛️</div>
+                    <div class="text-4xl mb-4"></div>
                     <h3 class="text-xl font-bold text-red-800">The Exchange</h3>
                     <p class="text-gray-600 mt-2">The central marketplace (like NYSE or Nasdaq) that provides the technology and rules for trading.</p>
                 </div>
@@ -360,3 +360,4 @@
     </script>
 </body>
 </html>
+
