--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <section id="players" class="py-16">
             <div class="text-center">
                  <h2 class="section-title">The Key Players</h2>
-                 <p class="section-intro">The stock market isn't just a computer program; it's a network of different participants, each with a specific role. Understanding who these players are is key to understanding how the market functions. Here are the main groups involved in the process.</p>
+                 <p class="section-intro">The stock market isn't just a computer program; it's a network of different participants, each with a specific role.<br>Understanding who these players are is key to understanding how the market functions.<br>Here are the main groups involved in the process.</p>
             </div>
             <div class="mt-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
                 <div class="card text-center">
@@ -360,4 +360,5 @@
     </script>
 </body>
 </html>
+
 
